<resources>
    <string name="app_name">GetPro</string>

    <string name="main_title">GetPro</string>
    <string name="title">About</string>
    <string name="category_training">Training</string>
    <string name="category_about">About</string>
    <string name="category_history">History</string>
    <string name="category_setting">Setting</string>
    <string name="clearshottraining">Clear Shot Training</string>
    <string name="dropshottraining">Drop Shot Training</string>
    <string name="nettraining">Net Training</string>
    <string name="smashtraining">Smash Training</string>

    <string name="targetsetto">Target set to: </string>
    <string name="target">Enter target number</string>

    <string name="straightclearright">Clear to right</string>
    <string name="striaghtclearleft">Clear to left</string>
    <string name="crossclearright">Cross clear to right</string>
    <string name="crossclearleft">Cross clear to left</string>
    <string name="todayachieve">Today achievement</string>
    <string name="clearshotachievetxt">Clear shot (straight right) achieve: </string>
    <string name="clearshotachievetxt1">Clear shot (straight left) achieve: </string>
    <string name="clearshotachievetxt2">Clear shot (cross to right) achieve: </string>
    <string name="clearshotachievetxt3">Clear shot (cross to left) achieve: </string>

    <string name="dropright">Drop shot to right</string>
    <string name="dropleft">Drop shot to left</string>
    <string name="crossdropright">Cross drop to right</string>
    <string name="crossdropleft">Cross drop to left</string>
    <string name="dropshotachievetxt">Drop shot (straight right) achieve: </string>
    <string name="dropshotachievetxt1">Drop shot (straight left) achieve: </string>
    <string name="dropshotachievetxt2">Drop shot (cross to right) achieve: </string>
    <string name="dropshotachievetxt3">Drop shot (cross to left) achieve: </string>

    <string name="netright">Net to right</string>
    <string name="netleft">Net to left</string>
    <string name="crossnetright">Cross net to right</string>
    <string name="crossnetleft">Cross net to left</string>
    <string name="netachievetxt">Net to right achieve: </string>
    <string name="netachievetxt1">Net to left achieve: </string>
    <string name="netachievetxt2">Cross net to right achieve: </string>
    <string name="netachievetxt3">Cross net to left achieve: </string>

    <string name="smashhalf">Half court smash</string>
    <string name="smashbaseline">Baseline smash</string>
    <string name="smashhalfachieve">Half court smash achieve: </string>
    <string name="smashbaselineachieve">Baseline smash achieve: </string>

    <string name="descriptions_note">
        Note: Please warm up before start your training to prevent any sprain to happen during
        your training session
    </string>
    <string name="descriptions_about">
        This application is develop to help the badminton players out there to improve their skills.
        This application help users to track down their record. This application is more suitable for
        the player that know the basic skills of badminton.
    </string>
    <string name="descriptions_history">
        Note: Press the button below to view your achievement.
    </string>
    <string name="descriptions_training">
        Note: Here are some training category that can help you to improve your skills.
    </string>

    <string name="button_training">Training</string>
    <string name="button_history">History</string>
    <string name="button_setting">Setting</string>
    <string name="button_about">About</string>
    <string name="clearhistory_button">Clear History</string>
    <string name="set_button">Set</string>
    <string name="back_button">Back</string>
    <string name="submit_button">Submit</string>
    <string name="clearshottraining_button">clear shot</string>
    <string name="dropshottraining_button">Drop shot</string>
    <string name="nettraining_button">Net</string>
    <string name="smashtraining_button">Smash</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_training">training</string>
    <string name="title_activity_history">history</string>
    <string name="title_activity_setting">setting</string>
    <string name="title_activity_about">about</string>
    <string name="title_activity_clearshot">clearshot</string>
    <string name="title_activity_dropshot">dropshot</string>
    <string name="title_activity_net">net</string>
    <string name="title_activity_smash">smash</string>

</resources>
