<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3399ff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/back_button"
                android:drawablePadding="4dp"
                android:drawableLeft="@drawable/arrow_left"
                android:onClick="onClickButton"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/nettraining"
                android:text="@string/nettraining"
                android:textColor="#ffffff"
                android:textSize="24dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColorHint="#ffffff"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/target2"
                android:hint="@string/target"/>

            <Button
                android:background="#45ad43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_button2"
                android:text="@string/set_button"
                android:textColor="#ffffff"
                android:onClick="onClickButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginLeft="5dp"
                android:text="@string/targetsetto"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:id="@+id/targetsettotxt2"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColorHint="#ffffff"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/netright"
                android:hint="@string/netright"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColorHint="#ffffff"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/netleft"
                android:hint="@string/netleft"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColorHint="#ffffff"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/crossnetright"
                android:hint="@string/crossnetright"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColorHint="#ffffff"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/crossnetleft"
                android:hint="@string/crossnetleft"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <Button
                android:background="#45ad43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit_button2"
                android:text="@string/submit_button"
                android:textColor="#ffffff"
                android:onClick="submit2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"
                android:text="@string/todayachieve"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:text="@string/netachievetxt"
                android:textColor="#ffffff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/netrightachievetxt"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:text="@string/netachievetxt1"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/netleftachievetxt"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:text="@string/netachievetxt2"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/crossnetrightachievetxt"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/netachievetxt3"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/crossnetleftachievetxt"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
