<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3399ff">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/back_button"
                android:drawablePadding="4dp"
                android:drawableLeft="@drawable/arrow_left"
                android:onClick="onClickButton"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/smashtraining"
                android:text="@string/smashtraining"
                android:textColor="#ffffff"
                android:textSize="24dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColorHint="#ffffff"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/target3"
                android:hint="@string/target"/>

            <Button
                android:background="#45ad43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_button3"
                android:text="@string/set_button"
                android:textColor="#ffffff"
                android:onClick="onClickButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginLeft="5dp"
                android:text="@string/targetsetto"
                android:textColor="#ffffff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:id="@+id/targetsettotxt3"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColorHint="#ffffff"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/smashhalf"
                android:hint="@string/smashhalf"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColorHint="#ffffff"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/smashbaseline"
                android:hint="@string/smashbaseline"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <Button
                android:background="#45ad43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit_button3"
                android:text="@string/submit_button"
                android:textColor="#ffffff"
                android:onClick="submit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"
                android:text="@string/todayachieve"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:text="@string/smashhalfachieve"
                android:textColor="#ffffff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/halfcourtsmashtachievetxt"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:text="@string/smashbaselineachieve"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/baselinesmashachievetxt"
                android:textColor="#ffffff"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
